[package]
name = "comic-fs"
version = "0.1.0"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "fuse-rs", "fuse-rs/fuse-abi", "fuse-rs/fuse-sys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
fuse = { path = "fuse-rs" }
chrono = "0.4.11"
pretty_env_logger = "0.4.0"
libc = "0.2.71"
nix = "0.17.0"
cast = "0.2.3"
scopeguard = "1.1.0"
serde = { version = "1.0.114", features = ["derive"] }
sha2 = "0.9.1"
hex = "0.4.2"
ctrlc = { version = "3.1.5", features = ["termination"] }
color-backtrace = "0.4.2"
