[package]
name = "comic-fs"
version = "0.1.0"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "fuse-rs", "fuse-rs/fuse-abi", "fuse-rs/fuse-sys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
fuse = { path = "fuse-rs" }
chrono = "0.4.19"
pretty_env_logger = "0.4.0"
libc = "0.2.79"
nix = "0.19.0"
cast = "0.2.3"
scopeguard = "1.1.0"
serde = { version = "1.0.117", features = ["derive"] }
sha2 = "0.9.1"
hex = "0.4.2"
ctrlc = { version = "3.1.7", features = ["termination"] }
once_cell = "1.4.1"
strum_macros = "0.19.4"
strum = "0.19.5"
color-eyre = "0.5.6"
path-clean = "0.1.0"
tracing = "0.1.21"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.14"
tracing-appender = "0.1.1"
derive_more = "0.99.11"
tracing-error = "0.1.2"
